<resources>
    <string name="app_name">GrantMe</string>
    <string name="copyright">Copyright (C) 2023 by CH2-PS562</string>
    <string name="kata1">Langkah kecilmu saat mencari beasiswa adalah investasi untuk masa depanmu. Tetap semangat!</string>
    <string name="kata2">Tantangan mencari beasiswa adalah bagian dari perjalananmu menuju sukses. Teruskan perjuanganmu!</string>
    <string name="kata3">Setiap usahamu membawamu lebih dekat kepada beasiswa yang diimpikan. Percayalah pada potensimu dan teruslah berjuang.</string>
    <string name="title1">Investasi Masa Depan</string>
    <string name="title2">Tantangan Perjalanan Sukses</string>
    <string name="title3">Perjuangan Menuju Impian</string>
    <string name="lanjut">Lanjut</string>
    <string name="temukan">Temukan Beasiswamu dan Raih Impianmu</string>
    <string name="daftar">Daftar</string>
    <string name="masuk">Masuk</string>
    <string name="grantme">Grant Me</string>
    <string name="welcome">Welcome to</string>
    <string name="registrasi">Registrasi Akun</string>
    <string name="nama_regis">Nama Lengkap</string>
    <string name="email_regis">E-Mail</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="data_ipk">IPK</string>
    <string name="data_sertif">Sertifikasi</string>
    <string name="data_sertif_pro">Sertifikasi Professional</string>
    <string name="data_prestasi">Prestasi Nasional</string>
    <string name="komp_nasional">Kompetisi Top 3 Nasional</string>
    <string name="komp_internasional">Prestasi Internasional</string>
    <string name="data_magang">Pengalaman Magang</string>
    <string name="data_kepanitiaan">Pengalaman Kepanitiaan</string>
    <string name="hai">Hai</string>
    <string name="temukan_beasiwa">Temukan beasiswa idamanmu!</string>
    <string name="rekomendasi">Rekomendasi Beasiswa Untuk Anda</string>
    <string name="lihar_semua">Lihat semua</string>
    <string name="semua_beasiswa">Semua beasiswa</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="registrasiluar">Registrasi</string>
    <string name="simpan">Simpan</string>
    <string name="ipk">IPK</string>
    <string name="sertifikasi">Sertifikasi</string>
    <string name="prestasinasional">Prestasi Nasional</string>
    <string name="lombanasional">Lomba Nasional</string>
    <string name="prestasiinter">Prestasi Internasional</string>
    <string name="lombainter">Lomba Internasional</string>
    <string name="magang">Magang</string>
    <string name="kepanitiaan">Kepanitiaan</string>
    <string name="masukkanangka">Masukkan jumlah (angka) </string>
    <string name="lastipk">IPK Terakhir </string>
    <string name="datadiri">Data Diri </string>
    <string name="daftarbea">Daftar Beasiswa</string>
    <string name="sisa_hari_text">Tersisa %d hari lagi.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>