<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.welcome.WelcomeActivity">
    <ImageView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="465dp"
        android:background="@drawable/bulat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/woman"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/woman"
        android:viewportWidth="598"
        android:viewportHeight="398"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="53dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/grantme"
        android:textColor="#6E85B7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btnDaftarWelcome"
        android:layout_width="359dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_daftar"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/daftar"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTemukan" />

    <Button
        android:id="@+id/btnLoginWelcome"
        android:layout_width="359dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_login"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/masuk"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDaftarWelcome" />

    <TextView
        android:id="@+id/textTemukan"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/temukan"
        android:textColor="#505766"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>