<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.register.RegisterActivity">

    <TextView
        android:id="@+id/labelnotel"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/kata_sandi"
        android:textColor="#161C2B"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_email" />

    <ImageButton
        android:id="@+id/backregispenerima"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back" />


    <TextView
        android:id="@+id/labelemail"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/email_regis"
        android:textColor="#161C2B"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_nama" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/form_daftar"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="Masukkan E-mail"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3AE"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelemail" />

    <EditText
        android:id="@+id/reg_sandi"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/form_daftar"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="Buat Kata Sandi"
        android:inputType="textPassword"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3AE"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelnotel" />

    <EditText
        android:id="@+id/reg_nama"
        android:layout_width="340dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/form_daftar"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="Masukkan nama lengkap"
        android:inputType="text"
        android:padding="5dp"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3AE"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelnale" />

    <TextView
        android:id="@+id/textDaftar"
        android:layout_width="302dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/registrasi"
        android:textColor="#161C2B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/backregispenerima"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelnale"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/nama_regis"
        android:textColor="#161C2B"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDaftar" />

    <Button
        android:id="@+id/btnRegis"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_daftar"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/registrasiluar"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="Sudah punya akun?"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/btnRegis"
        app:layout_constraintTop_toBottomOf="@+id/btnRegis" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Masuk"
        android:textColor="#6E85B7"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/btnRegis" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>